--- a/reservevehicle/home/templates/content.html
+++ b/reservevehicle/home/templates/content.html
@@ -31,15 +31,17 @@
 								<input type="text" name="Date"	placeHolder='20/05/2014' data-constraints="@NotEmpty @Required @Date">
 							</label>
 							<div class="clear"></div>
-							<div class="tmRadio">
-								<p>Comfort</p>
-								<input name="Comfort" type="radio" id="tmRadio0" data-constraints='@RadioGroupChecked(name="Comfort", groups=[RadioGroup])' checked/>
-								<span>Cheap</span>
-								<input name="Comfort" type="radio" id="tmRadio1" data-constraints='@RadioGroupChecked(name="Comfort", groups=[RadioGroup])' />
-								<span>Standart</span>
-								<input name="Comfort" type="radio" id="tmRadio2" data-constraints='@RadioGroupChecked(name="Comfort", groups=[RadioGroup])' />
-								<span>Lux</span>
-							</div>
+
+								<div class="tmRadio">
+								<br>Comfort</br>
+									<input name="Comfort" type="radio" id="tmRadio0" data-constraints='@RadioGroupChecked(name="Comfort", groups=[RadioGroup])' checked/>
+									<span>Cheap</span>
+									<input name="Comfort" type="radio" id="tmRadio1" data-constraints='@RadioGroupChecked(name="Comfort", groups=[RadioGroup])' />
+									<span>Standart</span>
+									<input name="Comfort" type="radio" id="tmRadio2" data-constraints='@RadioGroupChecked(name="Comfort", groups=[RadioGroup])' />
+									<span>Lux</span>
+								</div>
+
 							<div class="clear"></div>
 							<div class="fl1 fl2">
 								<em>Adults</em>
@@ -68,9 +70,10 @@
 						</form>
 					</div>
 					<div class="grid_6 prefix_1">
-						<a href="index2.html" class="type"><img src="{% static 'images/page1_img1.jpg' %}" alt=""><span class="type_caption">Economy</span></a>
-						<a href="index2.html" class="type"><img src="{% static 'images/page1_img2.jpg' %}" alt=""><span class="type_caption">Standard</span></a>
-						<a href="index2.html" class="type"><img src="{% static 'images/page1_img3.jpg' %}" alt=""><span class="type_caption">Lux</span></a>
+						{% for rs in vehiclelist %}
+							<a href="/vehicle/{{rs.id}}/{{rs.slug}}" class="type"><img src="{{rs.image.url}}" alt=""><span class="type_caption">{{rs.category}}</span></a>
+
+						{% endfor %}
 					</div>
 					<div class="clear"></div>
 				</div>
