--- a/reservevehicle/home/templates/content.html
+++ b/reservevehicle/home/templates/content.html
@@ -32,8 +32,8 @@
 							</label>
 							<div class="clear"></div>
 
-								<div class="tmRadio">
-								<br>Comfort</br>
+								<div class="tmRadio" >
+								<p>Comfort</p>
 									<input name="Comfort" type="radio" id="tmRadio0" data-constraints='@RadioGroupChecked(name="Comfort", groups=[RadioGroup])' checked/>
 									<span>Cheap</span>
 									<input name="Comfort" type="radio" id="tmRadio1" data-constraints='@RadioGroupChecked(name="Comfort", groups=[RadioGroup])' />
