--- a/reservevehicle/home/templates/homebase.html
+++ b/reservevehicle/home/templates/homebase.html
@@ -29,11 +29,12 @@
 		<script src="{% static 'js/owl.carousel.js' %}"></script>
 		<script src="{% static 'js/camera.js' %}"></script>
 		<!--[if (gt IE 9)|!(IE)]><!-->
+
+
 	   <script src="{% static 'js/jquery.mobile.customized.min.js' %}"></script>
 		<!--<![endif]-->
 		<script src="{% static 'booking/js/booking.js' %}"></script>
-
-
+		<!-- jQuery !-->
 			<!--[if lt IE 8]>
 
 		<![endif]-->
