--- a/reservevehicle/home/templates/about.html
+++ b/reservevehicle/home/templates/about.html
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="content"><div class="ic">Hakkımızda</div>
+<div class="content" style="background: white; padding-bottom: 500px"><div class="ic">Hakkımızda</div>
 				<div class="container_12">
 					{{setting.aboutus|safe}}
 
