--- a/reservevehicle/home/templates/contact.html
+++ b/reservevehicle/home/templates/contact.html
@@ -10,9 +10,10 @@
 
 {% block content %}
 
-<div class="content"><div class="ic"> İletişim </div>
-	<div class="row">
-			<div class="container_12">
+<div class="content" style="background: white; padding-bottom: 1200px">
+	<div class="ic"> İletişim </div>
+		<div class="row">
+		 <div class="container_12">
 				<div class="grid_12">
 					<h3>Contact with Us</h3>
 					<div class="grid_4 prefix_1">
@@ -24,7 +25,6 @@
 								</div>
 							{% endfor %}
 						{% endif %}
-
 
 						<form action="" method="post">
 							{% csrf_token %}
