--- a/reservevehicle/home/templates/category_vehicles.html
+++ b/reservevehicle/home/templates/category_vehicles.html
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="content"><div class="ic">vehicles</div>
+<div class="content" style="background: white; padding-bottom:1000px"><div class="ic">vehicles</div>
 				<div class="container_12">
 					<div class="grid_6">
 					{% for data in category_data %}
