--- a/reservevehicle/home/templates/about.html
+++ b/reservevehicle/home/templates/about.html
@@ -10,11 +10,13 @@
 
 {% block content %}
 <div class="content" style="background: white; padding-bottom: 500px"><div class="ic">Hakkımızda</div>
-				<div class="container_12">
-					{{setting.aboutus|safe}}
+	<div class="container_12">
+		{{setting.aboutus|safe}}
 
-				</div>
-			</div>
+	</div>
+	<div class="grid_12"><a href="/faq" style="margin-left: 640px; font-family: 'Microsoft Sans Serif', Tahoma, Arial, Verdana, Sans-Serif"> FAQ</a> </div>
+
+</div>
 
 
 
