--- a/reservevehicle/home/templates/category_vehicles.html
+++ b/reservevehicle/home/templates/category_vehicles.html
@@ -19,8 +19,7 @@
 							</a>
 						</div>
 						<div class="grid_6 prefix_6 " style="margin-top: -400px">
-							{{data.description}}
-							<button class="btn btn-large" type="submit" style="margin-left: 200px" > Rezervasyon yap</button>
+							<button class="btn btn-large" type="submit" style="margin-left: 200px" ><a href="/category/{{data.id}}/{{data.slug}}">Get More Information</a></button>
 						</div>
 					{% endfor %}
 					</div>
