--- a/reservevehicle/home/templates/login.html
+++ b/reservevehicle/home/templates/login.html
@@ -10,7 +10,7 @@
 
 {% block content %}
 
-<div class="content"><div class="ic"> Sign Up Page </div>
+<div class="content" style="background: white; padding-bottom: 600px"><div class="ic"> Sign Up Page </div>
 	<div class="row">
 			<div class="container_12">
 				<div class="grid_12">
