--- a/reservevehicle/home/templates/references.html
+++ b/reservevehicle/home/templates/references.html
@@ -9,12 +9,15 @@
 {% endblock %}
 
 {% block content %}
-<div class="content"><div class="ic">Hakkımızda</div>
-				<div class="container_12">
-					{{setting.references|safe}}
+<div class="content" style="background: white; padding-bottom: 1600px">
+	<div class="ic">Hakkımızda</div>
+	<div class="clear" style="padding-top: 40px"></div>
 
-				</div>
-			</div>
+	<div class="container_12">
+		{{setting.references|safe}}
+
+	</div>
+</div>
 
 
 
