--- a/reservevehicle/home/templates/vehicle_detail.html
+++ b/reservevehicle/home/templates/vehicle_detail.html
@@ -8,7 +8,7 @@
 <link rel ='shortcut icon' type='image/x-icon' href='{{setting.icon.url}}' />
 {% endblock %}
 
-{% block content %}bu neresi jbökbjhkb
+{% block content %}
 
 <div class="content" style="background: white; padding-bottom: 1000px">
 	<div class="ic">Araç Detayı</div>
@@ -28,7 +28,7 @@
 								<span class="text-uppercase"> Kişi Sayısı: </span>
 								<input name="quantity" class="input" type="number" min="0" max="{{vehicle.amount}}" value="1">
 							</div>
-							<button type="submit" class="btn-small">Rezervasyon Yap</button>
+							<button type="submit" class="btn-small">Add To Mycart</button>
 						</form>
 					</div>
 					<div class="">
