--- a/reservevehicle/home/templates/vehicles_search.html
+++ b/reservevehicle/home/templates/vehicles_search.html
@@ -10,7 +10,7 @@
 
 {% block content %}
 
-<div class="content">
+<div class="content" style="background: white; padding-bottom: 1000px">
 	<div class="ic">Search</div>
 				<div class="container_12">
 					<ul class="broadcrumb">
