--- a/reservevehicle/home/templates/header.html
+++ b/reservevehicle/home/templates/header.html
@@ -41,11 +41,11 @@ ul:after { clear: both; }
   } */
 
 </script>
-<div class="main">
+<div class="main" style="margin-top: -24px">
 <header>
 	<div class="menu_block">
 		<div class="container_12" >
-			<div class="grid_12">
+			<div class="grid_12" style="margin-top: 20px">
 				<nav class="horizontal-nav full-width horizontalNav-notprocessed">
 					<ul class="sf-menu">
 						<li><a href="/">Home</a></li>
