--- a/reservevehicle/home/templates/header.html
+++ b/reservevehicle/home/templates/header.html
@@ -84,7 +84,7 @@ ul:after { clear: both; }
 									<a href="/shopcart">
 									<i class="fa fa-shopping-cart"></i>
 									<span class="">{{request.session.cart_items}}</span>
-									<strong class="text"> My Cart</strong>
+									<strong class="text"> Reservation Cart</strong>
 									</a>
 								</li>
 								<li><a href="/user/comments"><i class="fa fa-comment"></i> My comments</a> </li>
