--- a/reservevehicle/reservation/templates/Shopcart_vehicles.html
+++ b/reservevehicle/reservation/templates/Shopcart_vehicles.html
@@ -12,7 +12,7 @@
 
 <div class="content" style="background: white; padding-bottom: 400px">
 	<div class="ic">Shop Cart</div>
-				<div class="container_12">
+				<div class="container_12" style="text-align: center">
 					<div class="section-title">
 						<h3 class="title">Shop Cart list</h3>
 	   				</div>
