--- a/reservevehicle/user/templates/user_panel.html
+++ b/reservevehicle/user/templates/user_panel.html
@@ -1,10 +1,10 @@
 <style>
 	html, body{
-   padding:0px;
-   margin:0px;
-   font-family: 'Raleway', sans-serif;
-   color: #000000;
-   height:100%;
+      padding:0px;
+      margin:0px;
+      font-family: 'Raleway', sans-serif;
+      color: #000000;
+      height:100%;
 }
 
 .container{
@@ -58,6 +58,8 @@
 </style>
 
 
+
+
 <div class="container" style="margin-top: 20px">
 
   <div class="link">
@@ -69,7 +71,7 @@
   <div class="link">
     <div class="text">
       <a href="/user/">
-        My Account
+        Profile
       </a>
     </div>
   </div>
@@ -77,7 +79,7 @@
   <div class="link">
     <div class="text">
       <a href="/user/mycomments/">
-        My Comment
+        Comments
       </a>
     </div>
   </div>
@@ -85,14 +87,14 @@
    <div class="link">
     <div class="text">
       <a href="/user/reservations">
-        My Reservations
+        Reservations
       </a>
     </div>
   </div>
 
   <div class="link">
     <div class="text">
-      <a href="/logout/"> Çıkış Yap </a>
+      <a href="/logout/"> Logout </a>
     </div>
   </div>
 
